# post_gnome

./: README.rst  conda_requirements.txt  requirements.txt  setup.cfg  setup.py
post_gnome/: nc_particles.py
post_gnome/plotting/: geo_plots.py
post_gnome/plotting/examples/: contour_particles_at_time.py  plot_particles_at_time.py  plot_particles_at_time_with_velocity.py
post_gnome/tests/: jun.kmz  junk_file.nc  junk_file4.nc  junk_file5.nc  sample.kmz
scripts/: make_erma_package.py
src/post_gnome/: make_layer_file.py  nc2shape.py
src/post_gnome/kml/: kml_templates.py  kmz_particles.py  moss_kml_templates.py
src/post_gnome/plotting/examples/: plot_trajectories.py
src/post_gnome/scripts/: gnome_nc2kmz.py  make_erma_package.py  moss2kmz_series.py  moss2kmz_simple.py  set_status_for_beached.py
src/post_gnome/tests/: jun.kmz  junk_file.nc  junk_file3.nc  sample.kmz  test_kmz_particles.py  test_nc_particles.py  test_nc_reader.py  test_nc_writer.py
src/post_gnome/tests/temp_output/: readme.txt
