[metadata]

name = post_gnome
version = attr: src.post_gnome.__init__.__version__
author = Chris Barker,
author_email = Chris.Barker@noaa.gov,
url = https://github.com/NOAA-ORR-ERD/post_gnome,
description = Utilities for working with output the GNOME model,
long_description = file: README.rst, LICENSE.rst
license = CC0
classifiers =
    Development Status :: 2 - Pre-Alpha,
    Topic :: Utilities,
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Meteorology/Oceanography,
    License :: Public Domain,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: Implementation :: CPython,

[options]

zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]

console_scripts =
    gnome_nc2kmz = post_gnome.scripts.gnome_nc2kmz:main
    moss2kmz_series = post_gnome.scripts.moss2kmz_series:main
    moss2kmz_simple = post_gnome.scripts.moss2kmz_simple:main
    make_erma_package = post_gnome.scripts.make_erma_package:main
    set_status_for_beached = post_gnome.scripts.set_status_for_beached:main
